helm/k8s_files/deployment-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops
spec:
  replicas: 5
  selector:
    matchLabels:
      app: giropops
  template:
    metadata:
      labels:
        app: giropops
    spec:
      containers:
      - name: giropops
        image: linuxtips/nginx-prometheus-exporter:1.0.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: giropops
  labels:
    app: giropops
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: giropops
  sessionAffinity: None
  type: LoadBalancer
