helm/k8s_files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops
            port: 
              number: 80
